--- a/GUI/package.json
+++ b/GUI/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "axios": "^0.16.1",
+    "dotenv": "^5.0.1",
     "jsonfile": "^4.0.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6"
