--- a/GUI/package.json
+++ b/GUI/package.json
@@ -58,7 +58,9 @@
     "dotenv": "^5.0.1",
     "jsonfile": "^4.0.0",
     "vue": "^2.3.3",
-    "vue-electron": "^1.0.6"
+    "vue-electron": "^1.0.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
